placeholder for introduction and report questions

--- a/A4/spec.tex
+++ b/A4/spec.tex
@@ -53,6 +53,7 @@
 \bibliographystyle{plain}
 \bibliography{SmithCollectedRefs}
 
+[insert short introduction about program and MIS here]
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -194,5 +195,15 @@ n/a
 n/a
 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%% Questions %%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\section* {Questions}
+\begin{enumerate}
+    \item n/a
+    \item n/a
+\end{enumerate}
 
 \end {document}
