added placeholders for Dots Game Module, Dot Type Module, and Board ADT Module

--- a/A4/spec.tex
+++ b/A4/spec.tex
@@ -56,6 +56,7 @@
 [insert short introduction about program and MIS here]
 
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%% Example Module %%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -127,13 +128,153 @@ n/a
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%% Example Module %%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%% Dot Type Module %%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-\section* {Example Module}
+\section* {Dot Type Module}
 % module
 \subsection*{Module}
+DotT
+
+
+% uses
+\subsection* {Uses}
 n/a
+
+
+% syntax
+\subsection* {Syntax}
+\subsubsection* {Exported Constants}
+n/a
+
+\subsubsection* {Exported Types}
+n/a
+
+\subsubsection* {Exported Access Programs}
+\begin{tabular}{| l | l | l | l |}
+\hline
+\textbf{Routine name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions}\\
+\hline
+routine1 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & \\
+\hline
+routine2 & ~ & $\mathbb{Z}$ & ~\\
+\hline
+routine3 & ~ & $\mathbb{Z}$ & ~\\
+\hline
+routine3 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & ~\\
+\hline
+\end{tabular}
+
+
+% semantics
+\subsection* {Semantics}
+\subsubsection* {State Variables}
+n/a
+
+\subsubsection* {State Invariant}
+n/a
+
+\subsubsection* {Assumptions}
+n/a
+
+\subsubsection* {Access Routine Semantics}
+\noindent routine($parameters$):
+\begin{itemize}
+    \item transition: $variable := something$
+    \item output: $out := something$
+    \item exception: $exc := something$
+\end{itemize}
+
+
+% local functions
+\subsection*{Local Functions}
+n/a
+
+
+% considerations
+\subsubsection* {Considerations}
+n/a
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%% Board ADT Module %%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\section* {Board ADT Module}
+% module
+\subsection*{Template Module}
+BoardT
+
+
+% uses
+\subsection* {Uses}
+n/a
+
+
+% syntax
+\subsection* {Syntax}
+\subsubsection* {Exported Constants}
+n/a
+
+\subsubsection* {Exported Types}
+n/a
+
+\subsubsection* {Exported Access Programs}
+\begin{tabular}{| l | l | l | l |}
+\hline
+\textbf{Routine name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions}\\
+\hline
+routine1 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & \\
+\hline
+routine2 & ~ & $\mathbb{Z}$ & ~\\
+\hline
+routine3 & ~ & $\mathbb{Z}$ & ~\\
+\hline
+routine3 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & ~\\
+\hline
+\end{tabular}
+
+
+% semantics
+\subsection* {Semantics}
+\subsubsection* {State Variables}
+n/a
+
+\subsubsection* {State Invariant}
+n/a
+
+\subsubsection* {Assumptions}
+n/a
+
+\subsubsection* {Access Routine Semantics}
+\noindent routine($parameters$):
+\begin{itemize}
+    \item transition: $variable := something$
+    \item output: $out := something$
+    \item exception: $exc := something$
+\end{itemize}
+
+
+% local functions
+\subsection*{Local Functions}
+n/a
+
+
+% considerations
+\subsubsection* {Considerations}
+n/a
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%% Dots Game Module %%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+\section* {Dots Game Module}
+% module
+\subsection*{Game Module}
+Dots
 
 
 % uses
