--- a/A4/spec.tex
+++ b/A4/spec.tex
@@ -481,29 +481,27 @@ Dots
 
 % uses
 \subsection* {Uses}
-n/a
+DotT \\
+ConnectionT \\
+BoardT
 
 
 % syntax
 \subsection* {Syntax}
 \subsubsection* {Exported Constants}
-n/a
+None
 
 \subsubsection* {Exported Types}
-n/a
+Game = ?
 
 \subsubsection* {Exported Access Programs}
 \begin{tabular}{| l | l | l | l |}
 \hline
 \textbf{Routine name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions}\\
 \hline
-routine1 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & \\
+new Game & $\mathbb{Z}$ & Game & \\
 \hline
-routine2 & ~ & $\mathbb{Z}$ & ~\\
-\hline
-routine3 & ~ & $\mathbb{Z}$ & ~\\
-\hline
-routine3 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & ~\\
+move & ConnectionT & ~ & ~\\
 \hline
 \end{tabular}
 
@@ -511,31 +509,52 @@ routine3 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & ~\\
 % semantics
 \subsection* {Semantics}
 \subsubsection* {State Variables}
-n/a
+gameboard: BoardT \\
+moves: $\mathbb{N}$ \\
+objectiveColor: DotT \\
+objectiveNum: $\mathbb{N}$ \\
+seed: $\mathbb{Z}$
 
 \subsubsection* {State Invariant}
 n/a
 
 \subsubsection* {Assumptions}
-n/a
+\begin{itemize}
+    \item The constructor new BoardT is called for each object instance before
+    any other access routine is called for that object.  The constructor cannot
+    be called on an existing object.
+
+    \item We assume that after a move, the newly "empty" points in the board
+    are populated at random uniformly, where each empty position has an
+    equal probability of being a specific DotT type.
+
+    \item We assume that the objective is to connect 10 of a certain color in 10
+    moves. If the target objective is reached (or surpassed) before the 10
+    moves is considered a win, while not completing the objective before the 10
+    moves is a failure.
+\end{itemize}
 
 \subsubsection* {Access Routine Semantics}
-\noindent routine($parameters$):
+\noindent new Game($seed$):
 \begin{itemize}
-    \item transition: $variable := something$
-    \item output: $out := something$
-    \item exception: $exc := something$
+    \item transition: $[insert semantics here]$
+    \item output: $[insert semantics here]$
+    \item exception: $[insert semantics here]$
+\end{itemize}
+
+\noindent move($c$):
+\begin{itemize}
+    \item transition: $[insert semantics here]$
+    \item output: $[insert semantics here]$
+    \item exception: $[insert semantics here]$
 \end{itemize}
 
 
 % local functions
 \subsection*{Local Functions}
-n/a
-
-
-% considerations
-\subsubsection* {Considerations}
-n/a
+win \\
+lose \\
+reset
 
 
 
