--- a/A4/spec.tex
+++ b/A4/spec.tex
@@ -53,77 +53,76 @@
 \bibliographystyle{plain}
 \bibliography{SmithCollectedRefs}
 
-[insert short introduction about program and MIS here]
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%% Example Module %%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-\section* {Example Module}
-% module
-\subsection*{Module}
-n/a
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%% Example Module %%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \newpage
+% \section* {Example Module}
+% % module
+% \subsection*{Module}
+% n/a
 
 
-% uses
-\subsection* {Uses}
-n/a
+% % uses
+% \subsection* {Uses}
+% n/a
 
 
-% syntax
-\subsection* {Syntax}
-\subsubsection* {Exported Constants}
-n/a
+% % syntax
+% \subsection* {Syntax}
+% \subsubsection* {Exported Constants}
+% n/a
 
-\subsubsection* {Exported Types}
-n/a
+% \subsubsection* {Exported Types}
+% n/a
 
-\subsubsection* {Exported Access Programs}
-\begin{tabular}{| l | l | l | l |}
-\hline
-\textbf{Routine name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions}\\
-\hline
-routine1 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & \\
-\hline
-routine2 & ~ & $\mathbb{Z}$ & ~\\
-\hline
-routine3 & ~ & $\mathbb{Z}$ & ~\\
-\hline
-routine3 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & ~\\
-\hline
-\end{tabular}
-
-
-% semantics
-\subsection* {Semantics}
-\subsubsection* {State Variables}
-n/a
-
-\subsubsection* {State Invariant}
-n/a
-
-\subsubsection* {Assumptions}
-n/a
-
-\subsubsection* {Access Routine Semantics}
-\noindent routine($parameters$):
-\begin{itemize}
-    \item transition: $variable := something$
-    \item output: $out := something$
-    \item exception: $exc := something$
-\end{itemize}
+% \subsubsection* {Exported Access Programs}
+% \begin{tabular}{| l | l | l | l |}
+% \hline
+% \textbf{Routine name} & \textbf{In} & \textbf{Out} & \textbf{Exceptions}\\
+% \hline
+% routine1 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & \\
+% \hline
+% routine2 & ~ & $\mathbb{Z}$ & ~\\
+% \hline
+% routine3 & ~ & $\mathbb{Z}$ & ~\\
+% \hline
+% routine3 & $\mathbb{Z}$, $\mathbb{Z}$ & $\mathbb{Z}$ & ~\\
+% \hline
+% \end{tabular}
 
 
-% local functions
-\subsection*{Local Functions}
-n/a
+% % semantics
+% \subsection* {Semantics}
+% \subsubsection* {State Variables}
+% n/a
+
+% \subsubsection* {State Invariant}
+% n/a
+
+% \subsubsection* {Assumptions}
+% n/a
+
+% \subsubsection* {Access Routine Semantics}
+% \noindent routine($parameters$):
+% \begin{itemize}
+%     \item transition: $variable := something$
+%     \item output: $out := something$
+%     \item exception: $exc := something$
+% \end{itemize}
 
 
-% considerations
-\subsubsection* {Considerations}
-n/a
+% % local functions
+% \subsection*{Local Functions}
+% n/a
+
+
+% % considerations
+% \subsubsection* {Considerations}
+% n/a
 
 
 
