--- a/FinalExam/final.tex
+++ b/FinalExam/final.tex
@@ -174,9 +174,21 @@ answer.\\
 \noindent \wss{Fill in the itemized list below with your answers}
 
 \begin{itemize}
-\item Software Engineering Principle 1 - explanation
-\item Software Engineering Principle 2 - explanation
-\item ...
+\item Generality - A USB is general because it is not specific in what type
+of data in can hold and acts almost the same as a hard drive. It can be used in
+many different scenarios (transfer files from one machine to another,
+backup files, boot a computer, install some software). In addition, a USB can
+be reformated to fit many different file formats (FAT32, NTFS, MacOS) to allow
+for transfer of files from a variety of operating systems.
+\item Reusability - As stated above, the generality of a USB allows it to be
+reused in a variety of scenarios (transfer files from one machine to another,
+backup files, boot a computer, install some software).
+\item Seperation of Concerns - The USB and computer transaction doesn't care
+about where the data came from, or the software that built it, it simply will
+hold whatever data you tell it to.
+\item Usability - Almost all computers these days have a USB (type A) port. Even
+if they don't, there are many various adapters and technologies that exists that
+allow you to use your usb on almost any device.
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
