--- a/FinalExam/final.tex
+++ b/FinalExam/final.tex
@@ -526,7 +526,7 @@ new Seq1D($S$):
 \begin{itemize}
 \item output: \wss{Calculate the rank of $p$ in the sequence, taking into
     account if there are ties} \\
-    $out := \mbox{t.rCalc}(\mbox{indexSet}(p, \mbox{sort}(s)))$
+    $out := \mbox{tieHandler.rCalc}(\mbox{indexSet}(p, \mbox{sort}(s)))$
 \item exception: \wss{A $p$ value is illegal if it does not appear in the
     sequence} \\
     $exc := \lnot (p \in s) \Rightarrow IllegalArgumentException$
